Committing with oXygen Web Author

--- a/bio19_u03_c08_l00_case_study_wrap-up.xhtml
+++ b/bio19_u03_c08_l00_case_study_wrap-up.xhtml
@@ -21,7 +21,7 @@
 </header>
 <section class="frontmatter" id="b2f8a20f71d94b2f8f3b9af6a3bb3bb0">
 <figure class="opener" id="a35bf7bad540435697066f3231900b19">
-<img src="../images/BIO19_SE_C08_R2082716.psd" alt="" id="f60e5ce00ad5446388ee155071ecba85"/><figcaption>
+<img src="BIO19_SE_C08_R2040064_a.jpg" alt="" id="f60e5ce00ad5446388ee155071ecba85" /><figcaption>
 <div class="caption" id="a3c64dbb696c43458a28599f1009ee67"><p id="a6ac30b5d1d74b438eb631ace92b0f3a">This image shows how the world may look to a person with LHON.</p></div>
 </figcaption>
 </figure>
